# svalbard

./: Cargo.toml
terminal/: Cargo.toml
terminal/src/: cli.rs  main.rs  shared.rs
terminal/src/tui/: dialog.rs  form.rs  input.rs  mod.rs  state.rs  utility.rs  vault_view.rs
test_data/: heart_eyes.vault
vault/: Cargo.toml
vault/src/: generate.rs  lib.rs  result.rs  seed.rs
