[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
data-encoding = "2.3.2"
deunicode = "1.3.1"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = { version = "1.13.0", features = ["base64"] }
thiserror = "1.0.31"
